# pandas-requests

./: .gitignore  README.md  pyproject.toml
src/exercicios/: script1.py  script2.py  script3.py  script4.py  script5.py  script6-scraping.py  script7-scraping.py
