[project]
name = "exercicios"
version = "0.1.0"
description = ""
authors = [
    {name = "brnooliveira",email = "breno.osales123@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "sqlalchemy (>=2.0.40,<3.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "xlrd (>=2.0.1,<3.0.0)"
]

[tool.poetry]
packages = [{include = "exercicios", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
